--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">
 
     <title>Test Assignment for Pharos Production</title>
 </head>
